# lupine-engine

./: =6.4.0  CMakeLists.txt  EXCEPTION_HANDLING.md  IMPLEMENTATION_STATUS.md  KINEMATIC_BODY_IMPROVEMENTS.md  MIGRATION_GUIDE.md  PHYSICS_IMPROVEMENTS.md  README_CPP.md  README_NEXT_STEPS.md  README_SCRIPTABLE_OBJECTS.md  SCENE_INSTANTIATION_SYSTEM.md  SConstruct  build_engine.bat  build_engine.ps1  build_engine.py  build_test.bat  main.py  project.lupine  requirements.txt  simple_camera_test.py  test_anchor_ui.json  test_animation_editor.py  test_animation_integration.py  test_animation_scene.scene  test_animation_system.py  test_basic.cpp  test_button_scene.py  test_button_signals.py  test_camera_alignment.scene  test_camera_coordinates.py  test_camera_fix.py  test_camera_runner.py  test_camera_scene.json  test_collision_hit_detection.py  test_comprehensive_scene_instantiation.py  test_enhanced_menu_builder.py  test_exception_handling.py  test_final_fixes.py  test_improved_physics.py  test_inheritance.py  (+29 more)
assets/: sample_tileset.tres
core/: __init__.py  audio.py  build_system.py  exception_handler.py  game_engine.py  global_editor_system.py  input_constants.py  input_manager.py  json_utils.py  node_registry.py  openal_audio.py  opengl_renderer.py  physics.py  project.py  python_runtime.py  scene.py  shared_renderer.py  simple_game_runner.py  tileset.py  visual_script_generator.py  visual_script_loader.py
core/animation/: __init__.py  animation.py  animation_player.py  animation_track.py  tween.py
core/dialogue/: __init__.py  asset_resolver.py  dialogue_commands.py  dialogue_parser.py  dialogue_runtime.py
docs/: BUG_FIX_REPORT.md  BUILD_SYSTEM.md  GLOBAL_SYSTEMS.md  IMPLEMENTATION_COMPLETE.md  INPUT_SYSTEM.md  PLAYER_CONTROLLER.md  PLAYER_CONTROLLER_USAGE.md  SIMPLE_PLAYER_CONTROLLER.md  VISUAL_SCRIPT_EDITOR.md  enhanced_menu_hud_builder.md  menu_hud_builder.md  scriptable_objects_system.md
editor/: add_node_dialog.py  animation_editor.py  build_dialog.py  console.py  dialogue_writer.py  file_browser.py  game_runner.py  globals_manager_dialog.py  input_actions_dialog.py  inspector.py  level_builder.py  main_editor.py  menu_hud_builder.py  polygon_builder.py  prefab_builder.py  project_settings_dialog.py  scene_instance_editor.py  scene_tree.py  scene_view.py  script_dialog.py  script_editor.py  tilemap_editor.py  tileset_editor.py
examples/: game_integration_example.py  game_script_with_global_scope.py  global_scope_demo.py  globals_usage_example.py  hud_builder_example.py  input_example.lsc  interactable_chest.lsc  interactable_npc.lsc  player_controller_demo.json  sample_singleton.py  scriptable_objects_demo.py
nodes/: Camera2D.lsc  CanvasLayer.lsc  CollisionShape2D.lsc  KinematicBody2D.lsc  Label.lsc  Node.lsc  Sprite.lsc  __init__.py
prefabs/: AdvancedPlayerController.lscene  AdvancedPlayerController.py  AdvancedPlayerController_README.md  PlayerController.json  PlayerController.lsc  PlayerControllerDemo.scene  SimplePlayerController.lscene  SimplePlayerController.py
scenes/: AudioTest.scene  ButtonTest.scene  Main.scene  PlayerTest.scene  TestPlayer.scene  TopDownPlayerTest.scene  tilemap_test.scene
scripts/: ButtonTestScript.py  SimpleMovement.py
test_project/: project.lupine
tests/: test_global_systems.py
tools/: methods.py
(+242 files in other folders)
